--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 description = "A simple tic tac toe game with a minimax ai"
 repository = "https://github.com/jungersa/tic_tac_toe_rust"
 license = "MIT"
+keywords = ["tic-tac-toe", "minimax", "ai", "cli"]
+categories = ["games", "development-tools::cargo-plugins"]
+readme = "README.md"
 
 [dependencies]
