--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,7 +11,6 @@
                 "message": "chore(release): ${nextRelease.version} [skip ci]"
             }
         ],
-        "@semantic-release/github",
-        "@semantic-release-cargo/semantic-release-cargo"
+        "@semantic-release/github"
     ]
 }
