--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,6 +11,7 @@
                 "message": "chore(release): ${nextRelease.version} [skip ci]"
             }
         ],
-        "@semantic-release/github"
+        "@semantic-release/github",
+        "@semantic-release/changelog"
     ]
 }
